[project]
name = "langgraph-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.21",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.27",
    "tavily-python>=0.5.4",
]
